--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://amsteffensen.github.io/yarn",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
